# codex-merge-session

./: .gitignore  Cargo.toml  README.md  build.rs  preview.html
docs/superpowers/plans/: 2026-04-18-codex-merge-session-ui-refresh-plan.md
docs/superpowers/specs/: 2026-04-18-codex-merge-session-ui-refresh-design.md
src/: app.rs  backup_registry.rs  codex_store.rs  fonts.rs  global_state.rs  lib.rs  main.rs  process_guard.rs  provider_scan.rs  session_files.rs  session_index.rs  settings.rs
tests/: app_tests.rs  codex_store_tests.rs  fonts_tests.rs
