[package]
name = "codex-merge-session"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
eframe = "0.31"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winresource = "0.1"
